// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render diff mode info for input 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receivePhone"
                          title="手机号"
                        >
                          手机号
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receivePhone"
                              placeholder="请输入手机号"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render diff mode info for input 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveEmail"
                          title="邮箱"
                        >
                          邮箱
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receiveEmail"
                              placeholder="请输入邮箱"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render form item validate 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-error"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveEmail"
                          title="邮箱"
                        >
                          邮箱
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-describedby="receiveEmail_help"
                              aria-invalid="true"
                              aria-required="true"
                              class="ant-input ant-input-status-error css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receiveEmail"
                              placeholder="请输入邮箱"
                              type="text"
                              value="com"
                            />
                          </div>
                        </div>
                        <div
                          style="display: flex; flex-wrap: nowrap;"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render form item validate 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-error"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receivePhone"
                          title="手机号"
                        >
                          手机号
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-describedby="receivePhone_help"
                              aria-invalid="true"
                              aria-required="true"
                              class="ant-input ant-input-status-error css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receivePhone"
                              placeholder="请输入手机号"
                              type="text"
                              value="phone"
                            />
                          </div>
                        </div>
                        <div
                          style="display: flex; flex-wrap: nowrap;"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render form submit success 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only ant-btn-loading system-config-button basic-button-wrapper css-geipcv"
              disabled=""
              type="submit"
            >
              <span
                class="ant-btn-icon ant-btn-loading-icon"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveEmail"
                          title="邮箱"
                        >
                          邮箱
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receiveEmail"
                              placeholder="请输入邮箱"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-message ant-message-top css-dev-only-do-not-override-txh9fw"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-success css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-success"
        >
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
          <span>
            已成功将审批消息推送至指定账号
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap form render popover cancel btn 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          for="receiveType"
                          title="接收方式"
                        >
                          接收方式
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-txh9fw"
                              id="receiveType"
                            >
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button ant-radio-button-checked"
                                >
                                  <input
                                    checked=""
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="email"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  邮箱
                                </span>
                              </label>
                              <label
                                class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="ant-radio-button"
                                >
                                  <input
                                    class="ant-radio-button-input"
                                    type="radio"
                                    value="phone"
                                  />
                                  <span
                                    class="ant-radio-button-inner"
                                  />
                                </span>
                                <span>
                                  手机号
                                </span>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveEmail"
                          title="邮箱"
                        >
                          邮箱
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                              id="receiveEmail"
                              placeholder="请输入邮箱"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap when hidden val is true render extraButtonsVisible is false 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      hidden=""
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/ProcessConnection/LarkAuditSetting/ConfigExtraButtons render snap when hidden val is true render isConfigClosed is true 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      hidden=""
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="submit"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="flashlight-fill"
                  >
                    <path
                      d="M8.6665 6.66669H13.3332L7.33317 15.3334V9.33335H2.6665L8.6665 0.666687V6.66669Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="edit-2-fill"
                  >
                    <path
                      d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
